added tooltip to map visualization

--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
             <li><a href="https://stackoverflow.com/questions/20632226/how-to-resize-polygon-in-svg">How to Resize Polygon in SVG?</a></li>
             <li><a href="https://stackoverflow.com/questions/19773081/better-way-to-position-svgpolygon">Better Way to Position SVG Polygon</a></li>
             <li><a href="https://stackoverflow.com/questions/8563240/how-to-get-all-checked-checkboxes">How to Get All Checked Checkboxes</a></li>
+            <li><a href="https://stackoverflow.com/questions/21153074/d3-positioning-tooltip-on-svg-element-not-working">Positioning Tooltip on SVG Element Not Working</a></li>
         </ul>
     </div>
 
