started bar charts

--- a/index.html
+++ b/index.html
@@ -96,13 +96,15 @@
 
                 <!-- Create the section that contains the map of Massachusetts -->
                 <div id="map">
-
                     
-                    <!-- <h3 class="centered">Drought Severities Over Time and Regions</h3>
+                </div>
+
+                <div id = "bar">
+                    <h3 class="centered">Drought Severities Over Time and Regions</h3>
 
 
                         <div class="year-filter2">
-                            <p>Filter by Year: </p>
+                            <p>Filter Bars by Year: </p>
                                 <select id="selectYear2">
                                     <option>2017</option>
                                     <option>2018</option>
@@ -111,7 +113,7 @@
                         </div>
 
                         <div class="month-filter1">
-                            <p>Filter by Month: </p>
+                            <p>Filter Bars by Month: </p>
                             <select id="selectMonth">
                                 <option>JAN</option>
                                 <option>FEB</option>
@@ -126,16 +128,12 @@
                                 <option>NOV</option>
                                 <option>DEC</option>
                             </select>
-                        </div>
 
                         <div>   
                         <p>
-                            <button id="btn2">Get Data for the Selected Year, Month, and Region(s)</button>
+                            <button id="btn2">Get Data for the Selected Year(s), Region(s), and Month(s)</button>
                         </p>
-                    </div> 
-
-                    <h4 class="centered">Hover Over a Star to See SPI Data for a Region</h4>
-                    <div id="legend2"></div>-->
+                    </div>
                 </div>
             
                 <!-- Create the section that contains the scatter graph-->
