added annual precipitation bar charts

--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
             <li><a href="https://stackoverflow.com/questions/8563240/how-to-get-all-checked-checkboxes">How to Get All Checked Checkboxes</a></li>
             <li><a href="https://stackoverflow.com/questions/21153074/d3-positioning-tooltip-on-svg-element-not-working">Positioning Tooltip on SVG Element Not Working</a></li>
             <li><a href="https://leafletjs.com/examples/map-panes/">Create Map Panes Using Leaflet</a></li>
+            <li><a href="https://stackoverflow.com/questions/11252753/rotate-x-axis-text-in-d3">Rotate X Axis Text in D3</a></li>
         </ul>
     </div>
 
