started on linking, got first 2 plots side by side

--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
             </div>
             
             <div class="child2">
+            <!-- Create the section that contains a line chart and scatterplot in the same row -->
+            <div class="lineAndScatter">
                 <!-- Create the section that contains the line chart -->
                 <div id="vis1">
                     <!-- Add chart title -->
@@ -129,6 +131,7 @@
                         </p>
                     </div>
                 </div>
+            </div>
 
                 <!-- Create the section that contains the map of Massachusetts -->
                 <div id="map"></div>
@@ -151,7 +154,7 @@
                     <h4 class="centered">Annual Precipitation for Each Region</h4>
                 </div>
                 <div id="link2">
-                    <h4 class="centered">Precipitation vs SPI</h4>
+                    <h4 class="centered">Precipitation vs. SPI</h4>
                 </div>
         </div>
     </div>
