got the first two plots to align

--- a/index.html
+++ b/index.html
@@ -94,6 +94,13 @@
                             <button id="btn1">Get Selected Year and Region(s)</button>
                         </p>
                     </div>
+                    <!-- Get the two charts in the first row to align evenly -->
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
                 </div>    
             
                 <!-- Create the section that contains the scatter graph-->
