edited tooltip and directions for linking

--- a/index.html
+++ b/index.html
@@ -159,9 +159,11 @@
                 </div>
                 <div id="link1">
                     <h4 class="centered">Annual Precipitation for Each Region</h4>
+                    <p class="centered">Click on a bar to highlight points that represent the same region</p>
                 </div>
                 <div id="link2">
                     <h4 class="centered">Precipitation vs. SPI</h4>
+                    <p class="centered">Brush over points to highlight bars that represent the same region</p>
                 </div>
         </div>
     </div>
