fixed brushing and linking

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
     <div class="tab">
         <button class="tablinks" onclick="openTab(event, 'Acknowledgements')">Acknowledgements</button>
-        <button class="tablinks" onclick="openTab(event, 'Visualization3')">Visualization3</button>
-        <button class="tablinks" onclick="openTab(event, 'Visualization2')">Visualization2</button>
-        <button class="tablinks" onclick="openTab(event, 'Visualization1')">Visualization1</button>
+        <button class="tablinks" onclick="openTab(event, 'Visualization3')">Visualization 3</button>
+        <button class="tablinks" onclick="openTab(event, 'Visualization2')">Visualization 2</button>
+        <button class="tablinks" onclick="openTab(event, 'Visualization1')">Visualization 1</button>
         <button class="tablinks" id="defaultOpen" onclick="openTab(event, 'About')">About</button>
     </div>
 
@@ -178,6 +178,9 @@
     </div>  
 
     <div id="Visualization3" class="tabcontent">
+        <!-- Define what "SPI" means because it is a critical feature in our visualizations -->
+        <p>"SPI" refers to  the number of standard deviations from normal precipitation totals a certain region experienced over a particular month in 2017, 2018, or 2019. Positive values refer to times when precipitation totals were higher than normal, while negative values refer to times when precipitation totals were lower than normal.</p>
+        
         <!-- Create the section that contains a bar chart and a scatter plot that are linked together through brushing and clicking-->
         <div class="link">
                 <div class="year-filter3">
